--- a/configurations/data/sequence-hf.yaml
+++ b/configurations/data/sequence-hf.yaml
@@ -12,6 +12,7 @@ datamodule:
     section_size: 10000
     prebatch: True
     shuffle: True
+    for_inference: False  # todo apply to validation as well?
   validation_split_size: 0.1
   test_split_size: 0.1
   max_nontrain_split_size: 500
