--- a/configurations/sequence.yaml
+++ b/configurations/sequence.yaml
@@ -1,9 +1,9 @@
-task: qa
+task: sequence
 project_name: classy
 exp_name: ???
 exp_folder: ./experiments/${exp_name}
 
-transformer_model: "bert-base-cased"
+transformer_model: "bert-large-cased"
 
 hydra:
   # customize working dir
@@ -21,10 +21,10 @@ hydra:
 # defaults
 defaults:
   - callbacks: empty
-  - data: qa-hf
+  - data: sequence
   - device: cuda
-  - model: qa-bert
-  - prediction: qa-hf
+  - model: sequence
+  - prediction: sequence
   - training: default
   - logging: default
   - _self_
