--- a/configurations/model/sequence.yaml
+++ b/configurations/model/sequence.yaml
@@ -1,4 +1,4 @@
-_target_: 'classy.pl_modules.hf.HFSequencePLModule'
+_target_: 'classy.pl_modules.hf.classification.HFSequencePLModule'
 transformer_model: ${transformer_model}
 optim_conf:
   _target_: classy.optim.factories.RAdamWithDecayFactory
