--- a/configurations/sequence.yaml
+++ b/configurations/sequence.yaml
@@ -26,6 +26,7 @@ defaults:
   - callbacks: empty
   - data: sequence
   - device: cuda
+  - evaluation: sequence
   - model: sequence
   - prediction: sequence
   - training: default
